changes on hearder

--- a/_site.yml
+++ b/_site.yml
@@ -7,27 +7,39 @@ navbar:
         href: https://github.com/KellyLuo233/mental_illness.github.io.git
       - icon: fa-play-circle fa-lg
         href: https://youtube.com
+        
   right:
-    - text: Sections
+    - text: 'Exploratory Analyses'
       menu:
-      - text: "Data Process"
-        href: data_process.html
-      - text: "Mental Illness"
-        href: mental_illness.html
-      - text: "Anxiety Trend Dashboard"
-        href: anxiety_trend_dashboard.html
+      - text: 'Anxiety'
+        href: analysis/exploratory_analysis/anxiety_report.html
+      - text: 'Depression'
+        href: analysis/exploratory_analysis/depression_report.html
+      - text: 'Mental Illness'
+        href: analysis/exploratory_analysis/mental_illness_report.html
+      - text: 'Suicide'
+        href: analysis/exploratory_analysis/suicide_report.html
+    - text: 'Statistical Analyses'
+      menu:
+      - text: "Anxiety"
+        href: analysis/statistical_analysis/anxiety_model.html
+      - text: "Depression"
+        href: analysis/statistical_analysis/depression_model.html
+      - text: "Suicide"
+        href: analysis/statistical_analysis/suicide_model.html
+    - text: 'Dashboard'
+      menu:
       - text: "Anxiety Trend"
-        href: anxiety_trend.html   
-      - text: "Depression Trend Dashboard"
-        href: depression_trend_dashboard.html
+        href: analysis/dashbboards/anxiety_trend_dashboard.html
       - text: "Depression Trend"
-        href: depression_trend.html
-      - text: "Suicide Analysis"
-        href: suicide_analysis.html
-      - text: "Statistical Analysis"
-        href: statistical_analysis.html
-      - text: "Project Report"
-        href: project_report.html
+        href: analysis/dashbboards/depression_trend_dashboard.html
+      - text: "Suicide Trend"
+        href: analysis/dashbboards/suicide_dashboard.html
+      - text: "Mental Illness"
+        href: analysis/dashbboards/mental_dashboard.html
+    - text: 'Project Report'
+      href: analysis/project_report.html
+  
       
 output:
   html_document:
