--- a/_site.yml
+++ b/_site.yml
@@ -8,7 +8,7 @@ navbar:
       - icon: fa-github fa-lg
         href: https://github.com/KellyLuo233/mental_illness.github.io.git
       - icon: fa-play-circle fa-lg
-        href: https://youtube.com
+        href: https://youtu.be/LCf-e-GY-w4
         
   right:
     - text: 'Data Processing '
